fix: amélioration contraste footer pour accessibilité

--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -34,7 +34,7 @@
   &__pseudo {
     font-family: $font-mono;
     font-size: $fs-small;
-    color: $color-primary;
+    color: $color-secondary;
     letter-spacing: 0.05em;
   }
 
